# permission-viewer

./: Makefile.am  README.md  configure.ac  main.c  meson.build  org.gnome.PermissionViewer.desktop  permission-viewer-app.c  permission-viewer-app.h  permission-viewer-win.c  permission-viewer-win.h  permission-viewer-win.ui  permission-viewer.c  permission-viewer.gresource.xml
